--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -9,4 +9,8 @@
     <string name="RadioButton">单选按钮</string>
     <string name="CheckBox">复选框</string>
     <string name="Switch"> 这是做什么的 ? </string>
+    <string name="ok">确定</string>
+    <string name="cancel">取消</string>
+    <string name="dialog_title">退出</string>
+    <string name="dialog_message">确定要结束这个页面吗？</string>
 </resources>
