--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="hello_message">Hello World!</string>
     <string name="ButtonText">I\’m a button</string>
     <string name="message">login</string>
-    <string name="passwd">password</string>
-    <string name="loginname">login name</string>
+    <string name="password">password</string>
+    <string name="login_name">login name</string>
     <string name="RadioButton">RadioButton</string>
     <string name="CheckBox">CheckBox</string>
     <string name="Switch"> What does this do? </string>
@@ -12,6 +12,7 @@
     <string name="cancel">Cancel</string>
     <string name="dialog_title">Exit</string>
     <string name="dialog_message">Do you want to leave the page?</string>
-
+    <string name="start_chat">Start Chat</string>
+    <string name="send">send</string>
 
 </resources>
