--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -16,5 +16,7 @@
     <string name="dialog_message">确定要结束这个页面吗？</string>
     <string name="start_chat">开始聊天</string>
     <string name="send">发送</string>
+    <string name="switch1">开关已开</string>
+    <string name="switch2">开关已关</string>
 
 </resources>
