--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -18,5 +18,6 @@
     <string name="send">发送</string>
     <string name="switch1">开关已开</string>
     <string name="switch2">开关已关</string>
+    <string name="infopass">ListItems活动传递：我的信息共享</string>
 
 </resources>
