--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="send">send</string>
     <string name="switch1">Switch is On</string>
     <string name="switch2">Switch is Off</string>
+    <string name="infopass">ListItemsActivity passed: My information to share</string>
+
 </resources>
