--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,7 @@
     <string name="message_here">\      MessageHere</string>
     <string name="title_activity_test_toolbar">TestToolbar</string>
     <string name="title_activity_main">TestToolbar</string>
+    <string name="forecast">weather forecast</string>
+    <string name="test_toolbar">Test Toolbar</string>
 
 </resources>
