--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,7 @@
     <string name="title_activity_main">TestToolbar</string>
     <string name="forecast">weather forecast</string>
     <string name="test_toolbar">Test Toolbar</string>
+    <string name="title_activity_test_an">TestAnActivity</string>
+    <string name="title_activity_test_eric">testEric</string>
 
 </resources>
